--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <a class="contact-button" href="mailto:mon_email@gmail.com?subject=Contact%20depuis%20jonathanroux.com">ME CONTACTER</a>
         </div>
         <div class="cover-contact">
-            <p><a href="toamimpoesien@gmail.com?subject=Contact%20depuis%20toamim.com">toamimpoesien@gmail.com</a></p>
-            <p><a href="tel:0323843410">032 38 434 10</a></p>
+            <p><a href="toamimpoesien@gmail.com?subject=Contact%20depuis%20jonathanroux.com">toamimpoesien@gmail.com</a></p>
+            <p><a href="tel:+26132384310">032 38 434 10</a></p>
         </div>
     </div>
 
@@ -34,8 +34,8 @@
         <img src="profile2.jpg" class="col40"/>
         <div class="col60 float-right" style="padding-left: 16px;">
             <div class="texte-avec-ligne-verticale">
-                <p>Passionné par la slam-poesie et cultures malagasy, je suis maintenant un écrivain qui vien du nord de Madagascar.<br><br>
-                    Expert dans les domaines du <b>web</b> et des <b>applications mobiles</b>, je propose mes services personnalisés pour des missions freelance.</p>
+                <p>Passionné par la slam-poésie et cultures malagasy, je suis maintenant ecrivain malagasy qui vien du nord de madagascar.<br><br>
+                    Expert dans les domaines du <b>ecriture</b> et des <b>cultures</b>, je propose mes services personnalisés pour des missions freelance.</p>
                 <a href="https://www.linkedin.com/in/rouxjonathan" target="_blank">En savoir plus sur mon profil</a>
             </div>
         </div>
@@ -48,28 +48,49 @@
         <table class="col-portfolio" style="display:inline-block">
             <tr>
                 <td><div class="barre-verticale"></div></td>
-                <td><a href="portfolio-site-restaurant.html"><img style="width:100%" src="project1small.jpg"></a></td>
+                <td><img style="width:100%" src="project1small.jpg"></td>
             </tr>
             <tr>
                 <td></td>
-                <td align="center"><a href="portfolio-site-restaurant.html">Site web pour un Ecrivain</a></td>
+                <td align="center"><a href="#">Site web pour un restaurant</a></td>
             </tr>
         </table>
         <table  class="col-portfolio float-right">
             <tr>
                 <td><div class="barre-verticale"></div></td>
-                <td><a href="portfolio-application-mobile-ai.html"><img style="width:100%" src="project2small.jpg"></a></td>
+                <td><img style="width:100%" src="project2small.jpg"></td>
             </tr>
             <tr>
                 <td></td>
-                <td align="center"><a href="portfolio-application-mobile-ai.html">Application mobile "Intelligence artificielle"</a></td>
+                <td align="center"><a href="#">Application mobile "Intelligence artificielle"</a></td>
             </tr>
         </table>
     </div>
 
-    <!-- SECTION BLANCHE FRAME -->
+    <!-- SECTION BLANCHE -->
     <div class="section">
-        <iframe src="contact-frame.html" scrolling="no"/>
+        <div class="frame">
+            <p class="frame-title">Parlons de votre projet</p>
+            <table style="width: 100%">
+                <tr>
+                    <td valign="top" align="center"><img src="profile.png" style="width: 100px"></td>
+                    <td>
+                        <div class="texte-avec-ligne-verticale"
+                        style="margin-left: 20px">
+                            <p>
+                                Besoin de discuter de votre projet 
+                                et obtenir l’avis d’un expert ?
+                                <br><br>
+                                <a href="toamimpoesien@gmail.com?subject=Contact%20depuis%20toamim.com">Contactez moi par email</a> ou directement
+                                par téléphone au <a href="tel:+261323843410">0323843410</a>
+
+                            </p>
+                        </div>
+                    </td>
+                </tr>
+            </table>
+
+        </div>
     </div>
 </body>
 </html>
